(fix) realign logo navbar and breadcrumb

--- a/src/dashboard/components/FilterBar/FilterBar.css
+++ b/src/dashboard/components/FilterBar/FilterBar.css
@@ -10,10 +10,10 @@
 
   margin-left: -10px;
   padding: var(--gap-size-2) 0;
-  padding-left: 20px;
+  padding-left: var(--gap-size-2);
   padding-bottom: var(--space-size-4);
 
-  top: 67px;
+  top: 88px;
   z-index: 100;
 
   background: var(--color-background);
