--- a/src/dashboard/components/Header/Header.css
+++ b/src/dashboard/components/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 200;
   transition:
     background 0.3s ease,
     backdrop-filter 0.3s ease;
@@ -22,10 +22,10 @@
   display: flex;
   align-items: center;
   gap: 0.5rem; /* Optional: space between logo and text */
-  margin: var(--space-size-0);
+  margin: var(--space-size-2) 0;
   text-decoration: none;
   color: var(--color-deep-blue);
-  margin-left: var(--space-size-2);
+  margin-left: var(--space-size-3);
   width: var(--navbar-width);
 }
 
